--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master of Science, Geomatics (2020)</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master of Science, Geomatics (2020)</span><span>Bachelor of Arts, Geography and Planning (2016)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <a href="mailto:stevecwlau@gmail.com">stevecwlau@gmail.com</a></li>
                 </ul>
               </div>
