--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="www.stevecwlau-portfolio.com">www.stevecwlau-portfolio.com</a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://stevecwlau.github.io/steve-portfolio/">www.stevecwlau.github.io/steve-portfolio/</a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <a href="tel:+852-6909-7236">+852 6909 7236</a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New Territories, Hong Kong</span></li>
                 </ul>
