--- a/index.html
+++ b/index.html
@@ -272,71 +272,40 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-analysis">Analysis</li>
+              <li data-filter=".filter-visualize">Visualize</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-analysis">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/lulc.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Urban extraction/thumbnail.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/lulc.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Land Use Land Cover Classification"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Urban extraction/urban.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Urban extraction"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-visualize">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/airpollution.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Temporal/thumbnail.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/airpollution.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Air Pollution Mapping"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/Temporal/fire temporal.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Spatio-temporal and static heatmaps of active fire events"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details-2.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-analysis">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/firedata.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/FYP/thumbnail.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/firedata.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fire Mapping"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/rainfall.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/rainfall.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="RGB 3-band Tiff to single band colored conversion"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/georef.gif" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/georef.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Georeferencing"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fyp.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/fyp.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Suicide Prevalence"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/FYP/suicide prevalence.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Suicide prevalence risk map"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details-3.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -359,9 +328,9 @@
               Steve is self-driven, practically oriented and perceptive. He played an important role in the development of the firm's geospatial analytics capabilities. He was also actively involved in the firm's consulting work, collaborating as part of a geospatial team to develop growth strategies, conduct investment due-diligence, and benchmark commercial opportunities for our commercial clients.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/user.jpg" class="testimonial-img" alt="">
-            <h3>Ben</h3>
-            <h4>Founder &amp; CEO</h4>
+            <img src="assets/img/testimonials/BenSimpfendorfer.jpg" class="testimonial-img" alt="">
+            <h3>Ben Simpfendorfer</h3>
+            <h4>Founder &amp; CEO of Silkroad Associates</h4>
           </div>
       </div><!-- End testimonial item -->
           </div>
