--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
               </div>
             </div>
             <p>
-              Steve is a Geospatial Analyst with experience in a diverse range of applications and fields within GIS consulting and commercial sector. He specializes in using QGIS, ESRI software and some degree of R for cartographic design, spatial analysis, remote sensing data processing and analysis.
+              Steve is a Geospatial Analyst with experience in a diverse range of applications and fields within GIS consulting and commercial sector. He specializes in using QGIS, ESRI software and some degree of R for cartographic design, spatial 
+              , remote sensing data processing and analysis.
             </p>
             <p>
               His interests include data analytics, remote sensing, urban transit and user experience. He is currently working as a Transit City Expert for Google Maps. His role is to lead the integration of transit data into Google Maps for the major markets in the APAC region. He also acts as liaison with the Product, Operations and Partnerships teams to achieve project goals. Apart from his most recent involvement in the development of Google Maps, his work to date has included serving in roles within developing land use and socio-economic activities for mainstream market across Asia, Middle East, and Africa. These findings are used to guide the lead economic consultant to help with the strategic advisory on exploring growth opportunities and assess commercial risks for the clients.
@@ -284,7 +285,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Urban extraction/thumbnail.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Urban extraction/urban.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Urban extraction"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Urban extraction/urban.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Urban extraction"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -304,7 +305,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/FYP/thumbnail.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/FYP/suicide prevalence.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Suicide prevalence risk map"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/FYP/suicide prevalence.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Suicide prevalence risk map"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details-3.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
