--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-analysis">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Urban extraction/thumbnail.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Urban extraction/thumbnail" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Urban extraction/urban.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Urban extraction"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -303,7 +303,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-analysis">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/FYP/thumbnail.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/FYP/thumbnail" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/FYP/suicide prevalence.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Suicide prevalence risk map"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details-3.html" title="More Details"><i class="bx bx-link"></i></a>
