--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>MSc in Geomatics (2020) <br> BA in Geography and Planning (2016)</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <a href="mailto:stevecwlau@gmail.com">stevecwlau@gmail.com</a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <a href="mailto:stevecwlau@tutamail.com">stevecwlau@tutamail.com</a></li>
                 </ul>
               </div>
             </div>
@@ -195,7 +195,7 @@
         <div class="section-title">
           <h2>Resume</h2>
         </div>
-        <a href="https://drive.google.com/file/d/1RAf5h4yEGfIZGUeA_45IcRX5xMrjaKjk/view?usp=sharing">Download Full Resume [PDF]</a>
+        <a href="https://drive.google.com/file/d/1--M5K0uCbEhldJpUH1LF36ot8nez-FV9/view?usp=share_link">Download Full Resume [PDF]</a>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
@@ -206,7 +206,7 @@
               <ul>
                 <li>New Territories, Hong Kong</li>
                 <li>(852) 6909 7236</li>
-                <li>stevecwlau@gmail.com</li>
+                <li>stevecwlau@tutamail.com</li>
               </ul>
             </div>
 
@@ -363,7 +363,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p><a href="mailto:stevecwlau@gmail.com">stevecwlau@gmail.com</a></p>
+                <p><a href="mailto:stevecwlau@tutamail.com">stevecwlau@tutmail.com</a></p>
               </div>
 
               <div class="phone">
